--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "laraveldaily/laravel-invoices": "^3.0",
         "srmklive/paypal": "~3.0"
     },
     "require-dev": {
