--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,13 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "laraveldaily/laravel-invoices": "^3.0",
-        "srmklive/paypal": "~3.0"
+        "predis/predis": "^2.0",
+        "srmklive/paypal": "~3.0",
+        "ext-redis": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
