--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^4.0",
         "laraveldaily/laravel-invoices": "^3.0",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "platformsh/laravel-bridge": "^2.2",
         "predis/predis": "^1.0",
         "pschocke/laravel-telegram-login-widget": "^2.0",
         "srmklive/paypal": "~3.0"
